2003-04-20  Gustavo Giraldez  <gustavo.giraldez@gmx.net>

	* gdl/gdl-dock-master.c (gdl_dock_master_drag_motion): Plugged a
	memory leak.
	
2003-04-05  Takeshi AIHANA <aihana@gnome.gr.jp>

	* configure.in: Added "ja" to ALL_LINGUAS.

2003-03-27  Evandro Fernandes Giovanini <evandrofg@ig.com.br>

	* configure.in (ALL_LINGUAS): Added "pt_BR".

2003-02-05  Thomas Vander Stichele <thomas at apestaart dot org>

        * configure.in: fix aclocal flags in maintainer mode

2003-01-24  Daniel Yacob <locales@geez.org>

	* configure.in: Added am to ALL_LINGUAS.

2003-01-23  Kjartan Maraas  <kmaraas@gnome.org>

	* configure.in (ALL_LINGUAS): Added "no".
	
2003-01-20  Pablo Saratxaga  <pablo@mandrakesoft.com>

	* configure.in: Added Dutch (nl) to ALL_LINGUAS

2003-01-20  Gustavo Giráldez  <gustavo.giraldez@gmx.net>

	* configure.in: Removed quotes from GETTEXT_PACKAGE since it was
	breaking the GNOME translation status pages (#103848).

2003-01-18  Gustavo Giráldez  <gustavo.giraldez@gmx.net>

	* gdl/gdl-dock-master.c: layout_changed signal is now emitted
	whenever some item is docked or detached, either by the user or
	programatically.  Previously, it was only emitted when the user
	changed the layout.  Also, the signal is emitted in an idle
	handler to prevent multiple emission.  The global "locked"
	property is now calculated more efficiently, and only reflects the
	locked state for items which can be locked, i.e. those which have
	a grip.
	(gdl_dock_master_add): Connect to "dock" and "detach" signals and
	"locked" notify for every dock item added to track layout changes
	and global "locked" property.
	(gdl_dock_master_remove): Queue a "layout_changed" signal and
	notify "locked" property if appropiate.

	* gdl/gdl-dock-layout.c: Items tree model updates are now
	incremental, not clear and fill.  Models are created when the
	layout object is created and are updated whenever we receive
	a layout_changed signal from the master.